Updated email address.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -19,7 +19,7 @@
           </div>
           <div class="column right">
             <a href="https://michael-emmi.github.io">michael-emmi.github.io</a><br>
-            <a href="mailto:michael.emmi@sri.com">michael.emmi@sri.com</a><br>
+            <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a><br>
           </div>
         </div>
     </section>
