--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
           </div>
           <div class="column right">
             <a href="https://michael-emmi.github.io">michael-emmi.github.io</a><br>
-            <a href="mailto:michael.emmi@sri.com">michael.emmi@sri.com</a><br>
+            <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a><br>
           </div>
         </div>
     </section>
@@ -340,7 +340,7 @@
               <a href="https://doi.org/10.1016/j.ic.2018.02.014">On Reducing Linearizability to State Reachability</a>.
           </span>
             In <span class="article-volume">Information and Computation</span>
-            (<nobr>I&C ’18</nobr>), volume 261, pages 383–400.
+            (<nobr>IC ’18</nobr>), volume 261, pages 383–400.
             Elsevier, 2018.
           <span class="screen-only">(<a href="papers/journals-iandc-BouajjaniEEH18.pdf">PDF</a>)</span>
         </div>
