--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 <span class="lhs">
                     <a href="papers/journals-iandc-BouajjaniEEH18.pdf">On Reducing Linearizability to State Reachability</a>
                 </span>
-                <span class="rhs"><nobr>I&C ’18</nobr></span>
+                <span class="rhs"><nobr>IC ’18</nobr></span>
               </div>
             </div>
             <div class="item">
@@ -774,7 +774,7 @@
         <section id="contact">
           <h2>Contact</h2>
             <div class="item">SRI International<br>One Grand Central Place<br>60 E 42nd St<br>New York, NY 10165<br>USA<br></div>
-            <a href="mailto:michael.emmi@sri.com">michael.emmi@sri.com</a><br>
+            <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a><br>
         </section>
 
       </div>
