--- a/publications.html
+++ b/publications.html
@@ -79,7 +79,7 @@
                 <a href="https://doi.org/10.1016/j.ic.2018.02.014">On Reducing Linearizability to State Reachability</a>.
             </span>
             In <span class="article-volume">Information and Computation</span>
-            (<nobr>I&C ’18</nobr>), volume 261, pages 383–400.
+            (<nobr>IC ’18</nobr>), volume 261, pages 383–400.
             Elsevier, 2018.
             <span class="screen-only">(<a href="papers/journals-iandc-BouajjaniEEH18.pdf">PDF</a>)</span>
           </li>
