Added NYPLSE talk.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -146,6 +146,11 @@
         </div>
         <div class="item">
           <span class="article-title">Contributed Talk</span>.
+          <span class="article-volume"><a href="https://nyplse.commons.gc.cuny.edu">New York Seminar on Programming Languages and Software Engineering</a></span>
+          (NYPLSE ’19).
+        </div>
+        <div class="item">
+          <span class="article-title">Contributed Talk</span>.
           <span class="article-volume"><a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=9578">IBM Programming Languages Day</a></span>
           (PL Day ’18).
         </div>
