--- a/cv.html
+++ b/cv.html
@@ -147,6 +147,11 @@
         </div>
         <div class="item">
           <span class="article-title">Contributed Talk</span>.
+          <span class="article-volume"><a href="https://nyplse.commons.gc.cuny.edu">New York Seminar on Programming Languages and Software Engineering</a></span>
+          (<nobr>NYPLSE ’19</nobr>).
+        </div>
+        <div class="item">
+          <span class="article-title">Contributed Talk</span>.
           <span class="article-volume"><a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=9578">IBM Programming Languages Day</a></span>
           (<nobr>PL Day ’18</nobr>).
         </div>
