--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
               <div class="head">
                 <span class="lhs">Contributed Talk</span>
                 <span class="rhs">
+                  <a href="https://nyplse.commons.gc.cuny.edu">
+                  <nobr>NYPLSE ’19</nobr>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Contributed Talk</span>
+                <span class="rhs">
                   <a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=9578">
                   <nobr>PL Day ’18</nobr>
                   </a>
