--- a/cv.html
+++ b/cv.html
@@ -151,6 +151,11 @@
           (<nobr>NYPLSE ’19</nobr>).
         </div>
         <div class="item">
+          <span class="article-title">Review Panelist</span>.
+          <span class="article-volume"><a href="https://www.nsf.gov">The National Science Foundation</a></span>
+          (<nobr>NSF ‘19</nobr>).
+        </div>
+        <div class="item">
           <span class="article-title">Contributed Talk</span>.
           <span class="article-volume"><a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=9578">IBM Programming Languages Day</a></span>
           (<nobr>PL Day ’18</nobr>).
@@ -309,6 +314,14 @@
 
     <section id="publications">
       <h2>Publications</h2>
+        <div class="item">
+          Michael Emmi, Shaobo He, and Gabriela Ciocarlie.
+          <span class="article-title">
+              ct-fuzz: Fuzzing for Timing Leaks.
+          </span>
+            ArXiv e-prints, 2017.
+          
+        </div>
         <div class="item">
           Michael Emmi and Constantin Enea.
           <span class="article-title">
