--- a/index.html
+++ b/index.html
@@ -76,6 +76,16 @@
             </div>
             <div class="item">
               <div class="head">
+                <span class="lhs">Review Panelist</span>
+                <span class="rhs">
+                  <a href="https://www.nsf.gov">
+                  <nobr>NSF ‘19</nobr>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
                 <span class="lhs">Contributed Talk</span>
                 <span class="rhs">
                   <a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=9578">
@@ -391,6 +401,14 @@
 
         <section id="publications">
           <h2>Publications</h2>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
+                    <a>ct-fuzz: Fuzzing for Timing Leaks</a>
+                </span>
+                <span class="rhs"><nobr>arXiv ’19</nobr></span>
+              </div>
+            </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">
