--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,16 @@
       <h2>In International Conference Proceedings</h2>
       <ol>
           <li class="item">
+            Michael Emmi, Shaobo He, and Gabriela Ciocarlie.
+            <span class="article-title">
+                ct-fuzz: Fuzzing for Timing Leaks.
+            </span>
+            In <span class="article-volume"></span>
+            (<nobr>arXiv ’19</nobr>), pages 1–19.
+            ArXiv e-prints, 2017.
+            
+          </li>
+          <li class="item">
             Michael Emmi and Constantin Enea.
             <span class="article-title">
                 <a href="https://dl.acm.org/citation.cfm?id=3290373">Weak-Consistency Specification via Visibility Relaxation</a>.
