--- a/cv.html
+++ b/cv.html
@@ -315,6 +315,26 @@
     <section id="publications">
       <h2>Publications</h2>
         <div class="item">
+          Ranadeep Biswas, Michael Emmi, and Constantin Enea.
+          <span class="article-title">
+              On the Complexity of Checking Consistency for Replicated Data Types.
+          </span>
+            In <span class="article-volume">Proc. 31st International Conference on Computer Aided Verification</span>
+            (<nobr>CAV ’19</nobr>), LNCS.
+            Springer, 2019.
+          
+        </div>
+        <div class="item">
+          Michael Emmi and Constantin Enea.
+          <span class="article-title">
+              Violat: Generating Tests of Observational Refinement for Concurrent Objects.
+          </span>
+            In <span class="article-volume">Proc. 31st International Conference on Computer Aided Verification</span>
+            (<nobr>CAV ’19</nobr>), LNCS.
+            Springer, 2019.
+          
+        </div>
+        <div class="item">
           Michael Emmi, Shaobo He, and Gabriela Ciocarlie.
           <span class="article-title">
               ct-fuzz: Fuzzing for Timing Leaks.
