--- a/index.html
+++ b/index.html
@@ -404,6 +404,22 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
+                    <a>On the Complexity of Checking Consistency for Replicated Data Types</a>
+                </span>
+                <span class="rhs"><nobr>CAV ’19</nobr></span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
+                    <a>Violat: Generating Tests of Observational Refinement for Concurrent Objects</a>
+                </span>
+                <span class="rhs"><nobr>CAV ’19</nobr></span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
                     <a>ct-fuzz: Fuzzing for Timing Leaks</a>
                 </span>
                 <span class="rhs"><nobr>arXiv ’19</nobr></span>
