--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,26 @@
       <h2>In International Conference Proceedings</h2>
       <ol>
           <li class="item">
+            Ranadeep Biswas, Michael Emmi, and Constantin Enea.
+            <span class="article-title">
+                On the Complexity of Checking Consistency for Replicated Data Types.
+            </span>
+            In <span class="article-volume">Proc. 31st International Conference on Computer Aided Verification</span>
+            (<nobr>CAV ’19</nobr>), LNCS.
+            Springer, 2019.
+            
+          </li>
+          <li class="item">
+            Michael Emmi and Constantin Enea.
+            <span class="article-title">
+                Violat: Generating Tests of Observational Refinement for Concurrent Objects.
+            </span>
+            In <span class="article-volume">Proc. 31st International Conference on Computer Aided Verification</span>
+            (<nobr>CAV ’19</nobr>), LNCS.
+            Springer, 2019.
+            
+          </li>
+          <li class="item">
             Michael Emmi, Shaobo He, and Gabriela Ciocarlie.
             <span class="article-title">
                 ct-fuzz: Fuzzing for Timing Leaks.
