Added ct-fuzz paper.

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>ct-fuzz: Fuzzing for Timing Leaks</a>
+                    <a href="papers/journals-corr-HeEC19.pdf">ct-fuzz: Fuzzing for Timing Leaks</a>
                 </span>
                 <span class="rhs"><nobr>arXiv ’19</nobr></span>
               </div>
