--- a/cv.html
+++ b/cv.html
@@ -337,10 +337,10 @@
         <div class="item">
           Michael Emmi, Shaobo He, and Gabriela Ciocarlie.
           <span class="article-title">
-              ct-fuzz: Fuzzing for Timing Leaks.
+              <a href="https://arxiv.org/abs/1904.07280">ct-fuzz: Fuzzing for Timing Leaks</a>.
           </span>
-            ArXiv e-prints, 2017.
-          
+            ArXiv e-prints, 2019.
+          <span class="screen-only">(<a href="papers/journals-corr-HeEC19.pdf">PDF</a>)</span>
         </div>
         <div class="item">
           Michael Emmi and Constantin Enea.
