--- a/publications.html
+++ b/publications.html
@@ -66,12 +66,12 @@
           <li class="item">
             Michael Emmi, Shaobo He, and Gabriela Ciocarlie.
             <span class="article-title">
-                ct-fuzz: Fuzzing for Timing Leaks.
+                <a href="https://arxiv.org/abs/1904.07280">ct-fuzz: Fuzzing for Timing Leaks</a>.
             </span>
             In <span class="article-volume"></span>
             (<nobr>arXiv ’19</nobr>), pages 1–19.
-            ArXiv e-prints, 2017.
-            
+            ArXiv e-prints, 2019.
+            <span class="screen-only">(<a href="papers/journals-corr-HeEC19.pdf">PDF</a>)</span>
           </li>
           <li class="item">
             Michael Emmi and Constantin Enea.
