Add CAV papers.

--- a/cv.html
+++ b/cv.html
@@ -317,22 +317,22 @@
         <div class="item">
           Ranadeep Biswas, Michael Emmi, and Constantin Enea.
           <span class="article-title">
-              On the Complexity of Checking Consistency for Replicated Data Types.
+              <a href="https://doi.org/10.1007/978-3-030-25543-5_19">On the Complexity of Checking Consistency for Replicated Data Types</a>.
           </span>
             In <span class="article-volume">Proc. 31st International Conference on Computer Aided Verification</span>
-            (<nobr>CAV ’19</nobr>), LNCS.
+            (<nobr>CAV ’19</nobr>), LNCS, volume 11562, pages 324–343.
             Springer, 2019.
-          
+          <span class="screen-only">(<a href="papers/conf-cav-BiswasEE19.pdf">PDF</a>)</span>
         </div>
         <div class="item">
           Michael Emmi and Constantin Enea.
           <span class="article-title">
-              Violat: Generating Tests of Observational Refinement for Concurrent Objects.
+              <a href="https://doi.org/10.1007/978-3-030-25543-5_30">Violat: Generating Tests of Observational Refinement for Concurrent Objects</a>.
           </span>
             In <span class="article-volume">Proc. 31st International Conference on Computer Aided Verification</span>
-            (<nobr>CAV ’19</nobr>), LNCS.
+            (<nobr>CAV ’19</nobr>), LNCS, volume 11562, pages 534–546.
             Springer, 2019.
-          
+          <span class="screen-only">(<a href="papers/conf-cav-EmmiE19.pdf">PDF</a>)</span>
         </div>
         <div class="item">
           Michael Emmi, Shaobo He, and Gabriela Ciocarlie.
