--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>On the Complexity of Checking Consistency for Replicated Data Types</a>
+                    <a href="papers/conf-cav-BiswasEE19.pdf">On the Complexity of Checking Consistency for Replicated Data Types</a>
                 </span>
                 <span class="rhs"><nobr>CAV ’19</nobr></span>
               </div>
@@ -412,7 +412,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>Violat: Generating Tests of Observational Refinement for Concurrent Objects</a>
+                    <a href="papers/conf-cav-EmmiE19.pdf">Violat: Generating Tests of Observational Refinement for Concurrent Objects</a>
                 </span>
                 <span class="rhs"><nobr>CAV ’19</nobr></span>
               </div>
