--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -131,6 +131,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="http://i-cav.org/2020/">32nd International Conference on Computer Aided Verification</a></span>
+          (CAV ’20).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://conf.researchr.org/home/pldi-2019">40th annual ACM SIGPLAN conference on Programming Language Design and Implementation</a></span>
           (PLDI ’19).
         </div>
