--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / SRI International">
+    <meta name="description" class="template" content="Michael Emmi: Researcher / ">
     <link rel="stylesheet" media="screen" href="css/screen.css">
     <link rel="stylesheet" media="print" href="css/print.css">
     <link rel="stylesheet" href="css/cv.css">
@@ -15,7 +15,7 @@
       <div class="tagline">Researcher</div>
         <div class="row">
           <div class="column left">
-            <div class="item">SRI International<br>One Grand Central Place<br>60 E 42nd St<br>New York, NY 10165<br>USA<br></div>
+            
           </div>
           <div class="column right">
             <a href="https://michael-emmi.github.io">michael-emmi.github.io</a><br>
@@ -27,7 +27,8 @@
     <section id="about">
       <h2>About</h2>
       <div>
-        ["Michael received his doctorate in Computer Science from UCLA in 2010 and joined SRI International in 2017, following a postdoc fellowship at the Paris 7 awarded by La Fondation Sciences Mathématiques de Paris (FSMP), and faculty researcher positions at the IMDEA Software Institute and Nokia Bell Labs. Prior to all that, Michael completed his undergraduate studies at Binghamton University (SUNY). He has been a teaching assistant for undergraduate courses at UCLA and Paris 7, and has held internships at Microsoft Research, NASA Ames Research Center, and IBM.", "Michael’s research enables the construction of reliable software by developing the foundations for effective programming abstractions and informative program analysis tools. Integrating technological trends with knowledge from several research communities spanning automata theory, programming languages, and distributed systems, his contributions include establishing the theoretical limits of program analysis, devising tractable approximations for intractable analysis problems, and building effective analysis tools."]
+          <p>Michael received his doctorate in Computer Science from UCLA in 2010 and joined SRI International in 2017, following a postdoc fellowship at the Paris 7 awarded by La Fondation Sciences Mathématiques de Paris (FSMP), and faculty researcher positions at the IMDEA Software Institute and Nokia Bell Labs. Prior to all that, Michael completed his undergraduate studies at Binghamton University (SUNY). He has been a teaching assistant for undergraduate courses at UCLA and Paris 7, and has held internships at Microsoft Research, NASA Ames Research Center, and IBM.</p>
+          <p>Michael’s research enables the construction of reliable software by developing the foundations for effective programming abstractions and informative program analysis tools. Integrating technological trends with knowledge from several research communities spanning automata theory, programming languages, and distributed systems, his contributions include establishing the theoretical limits of program analysis, devising tractable approximations for intractable analysis problems, and building effective analysis tools.</p>
       </div>
     </section>
 
@@ -60,7 +61,7 @@
     <section id="positions">
       <h2>Employment</h2>
         <div class="item">
-          <span class="article-title">Sr. Computer Scientist</span>. SRI International, 2017–present.
+          <span class="article-title">Sr. Computer Scientist</span>. SRI International, 2017–2019.
         </div>
         <div class="item">
           <span class="article-title">Member of Technical Staff</span>. Nokia Bell Labs, Murray Hill, NJ, 2016–2017.
