--- a/cv.html
+++ b/cv.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / SRI International">
+    <meta name="description" class="template" content="Michael Emmi: Researcher / ">
     <link rel="stylesheet" media="screen" href="css/screen.css">
     <link rel="stylesheet" media="print" href="css/print.css">
     <link rel="stylesheet" href="css/cv.css">
@@ -15,7 +15,7 @@
       <div class="tagline">Researcher</div>
         <div class="row">
           <div class="column left">
-            <div class="item">SRI International<br>One Grand Central Place<br>60 E 42nd St<br>New York, NY 10165<br>USA<br></div>
+            
           </div>
           <div class="column right">
             <a href="https://michael-emmi.github.io">michael-emmi.github.io</a><br>
@@ -61,7 +61,7 @@
     <section id="positions">
       <h2>Employment</h2>
         <div class="item">
-          <span class="article-title">Sr. Computer Scientist</span>. SRI International, 2017–present.
+          <span class="article-title">Sr. Computer Scientist</span>. SRI International, 2017–2019.
         </div>
         <div class="item">
           <span class="article-title">Member of Technical Staff</span>. Nokia Bell Labs, Murray Hill, NJ, 2016–2017.
