--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / SRI International">
+    <meta name="description" class="template" content="Michael Emmi: Researcher / ">
     <link rel="stylesheet" media="screen" href="css/screen.css">
     <link rel="stylesheet" media="print" href="css/print.css">
     <link rel="stylesheet" href="css/index.css">
@@ -15,7 +15,7 @@
 
         <section id="header">
           <h1 class="title">Michael Emmi</h1>
-          <div class="tagline">Researcher / SRI International</div>
+          <div class="tagline">Researcher </div>
           <div class="item">
               <span class="tag"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
               <span class="tag"><a href="https://scholar.google.com/citations?user=fOxqIXYAAAAJ">@Google Scholar</a></span>
@@ -827,7 +827,7 @@
 
         <section id="contact">
           <h2>Contact</h2>
-            <div class="item">SRI International<br>One Grand Central Place<br>60 E 42nd St<br>New York, NY 10165<br>USA<br></div>
+            <div class="item"></div>
             <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a><br>
         </section>
 
