--- a/cv.html
+++ b/cv.html
@@ -132,6 +132,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://concur2020.forsyte.at">31st International Conference on Concurrency Theory</a></span>
+          (<nobr>CONCUR ’20</nobr>).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="http://i-cav.org/2020/">32nd International Conference on Computer Aided Verification</a></span>
           (<nobr>CAV ’20</nobr>).
         </div>
