Added AWS role.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -61,6 +61,9 @@
     <section id="positions">
       <h2>Employment</h2>
         <div class="item">
+          <span class="article-title">Software Development Engineer</span>. Amazon Web Services, New York, NY, 2019–present.
+        </div>
+        <div class="item">
           <span class="article-title">Sr. Computer Scientist</span>. SRI International, 2017–2019.
         </div>
         <div class="item">
