Added PL day activity.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -144,6 +144,11 @@
           (CAV ’20).
         </div>
         <div class="item">
+          <span class="article-title">Selection Committee</span>.
+          <span class="article-volume"><a href="https://ibm.biz/plday2019">IBM Programming Languages Day</a></span>
+          (PL Day ’19).
+        </div>
+        <div class="item">
           <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://conf.researchr.org/home/pldi-2019">40th annual ACM SIGPLAN conference on Programming Language Design and Implementation</a></span>
           (PLDI ’19).
@@ -170,7 +175,7 @@
         </div>
         <div class="item">
           <span class="article-title">Contributed Talk</span>.
-          <span class="article-volume"><a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=9578">IBM Programming Languages Day</a></span>
+          <span class="article-volume"><a href="https://ibm.biz/plday2018">IBM Programming Languages Day</a></span>
           (PL Day ’18).
         </div>
         <div class="item">
@@ -225,7 +230,7 @@
         </div>
         <div class="item">
           <span class="article-title">Contributed Talk</span>.
-          <span class="article-volume"><a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=8106">IBM Programming Languages Day</a></span>
+          <span class="article-volume"><a href="https://ibm.biz/plday2017">IBM Programming Languages Day</a></span>
           (PL Day ’17).
         </div>
         <div class="item">
