--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
             </div>
             <div class="item">
               <div class="head">
+                <span class="lhs">Selection Committee</span>
+                <span class="rhs">
+                  <a href="https://ibm.biz/plday2019">
+                  <nobr>PL Day ’19</nobr>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
                   <a href="https://conf.researchr.org/home/pldi-2019">
@@ -108,7 +118,7 @@
               <div class="head">
                 <span class="lhs">Contributed Talk</span>
                 <span class="rhs">
-                  <a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=9578">
+                  <a href="https://ibm.biz/plday2018">
                   <nobr>PL Day ’18</nobr>
                   </a>
                 </span>
@@ -218,7 +228,7 @@
               <div class="head">
                 <span class="lhs">Contributed Talk</span>
                 <span class="rhs">
-                  <a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=8106">
+                  <a href="https://ibm.biz/plday2017">
                   <nobr>PL Day ’17</nobr>
                   </a>
                 </span>
