Added new arXiv paper.

--- a/index.html
+++ b/index.html
@@ -434,6 +434,14 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
+                    <a href="papers/journals-corr-KrishnaEEJ.pdf">Verifying Visibility-Based Weak Consistency</a>
+                </span>
+                <span class="rhs"><nobr>arXiv ’19</nobr></span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
                     <a href="papers/conf-cav-BiswasEE19.pdf">On the Complexity of Checking Consistency for Replicated Data Types</a>
                 </span>
                 <span class="rhs"><nobr>CAV ’19</nobr></span>
