--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,16 @@
       <h2>In International Conference Proceedings</h2>
       <ol>
           <li class="item">
+            Siddharth Krishna, Michael Emmi, Constantin Enea, Dejan Jovanovic.
+            <span class="article-title">
+                <a href="https://arxiv.org/abs/1911.01508">Verifying Visibility-Based Weak Consistency</a>.
+            </span>
+            In <span class="article-volume"></span>
+            (<nobr>arXiv ’19</nobr>), pages 1–19.
+            ArXiv e-prints, 2019.
+            <span class="screen-only">(<a href="papers/journals-corr-KrishnaEEJ.pdf">PDF</a>)</span>
+          </li>
+          <li class="item">
             Ranadeep Biswas, Michael Emmi, and Constantin Enea.
             <span class="article-title">
                 <a href="https://doi.org/10.1007/978-3-030-25543-5_19">On the Complexity of Checking Consistency for Replicated Data Types</a>.
