--- a/cv.html
+++ b/cv.html
@@ -333,6 +333,14 @@
     <section id="publications">
       <h2>Publications</h2>
         <div class="item">
+          Siddharth Krishna, Michael Emmi, Constantin Enea, Dejan Jovanovic.
+          <span class="article-title">
+              <a href="https://arxiv.org/abs/1911.01508">Verifying Visibility-Based Weak Consistency</a>.
+          </span>
+            ArXiv e-prints, 2019.
+          <span class="screen-only">(<a href="papers/journals-corr-KrishnaEEJ.pdf">PDF</a>)</span>
+        </div>
+        <div class="item">
           Ranadeep Biswas, Michael Emmi, and Constantin Enea.
           <span class="article-title">
               <a href="https://doi.org/10.1007/978-3-030-25543-5_19">On the Complexity of Checking Consistency for Replicated Data Types</a>.
