--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / ">
+    <meta name="description" class="template" content="Michael Emmi: Applied Scientist / Amazon Web Services">
     <link rel="stylesheet" media="screen" href="css/screen.css">
     <link rel="stylesheet" media="print" href="css/print.css">
     <link rel="stylesheet" href="css/cv.css">
@@ -12,7 +12,7 @@
   <body>
     <section id="header">
       <h1 class="title">Michael Emmi</h1>
-      <div class="tagline">Researcher</div>
+      <div class="tagline">Applied Scientist</div>
         <div class="row">
           <div class="column left">
             
@@ -61,7 +61,7 @@
     <section id="positions">
       <h2>Employment</h2>
         <div class="item">
-          <span class="article-title">Software Development Engineer</span>. Amazon Web Services, New York, NY, 2019–present.
+          <span class="article-title">Applied Scientist</span>. Amazon Web Services, New York, NY, 2019–present.
         </div>
         <div class="item">
           <span class="article-title">Sr. Computer Scientist</span>. SRI International, 2017–2019.
