--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / ">
+    <meta name="description" class="template" content="Michael Emmi: Applied Scientist / Amazon Web Services">
     <link rel="stylesheet" media="screen" href="css/screen.css">
     <link rel="stylesheet" media="print" href="css/print.css">
     <link rel="stylesheet" href="css/index.css">
@@ -15,7 +15,7 @@
 
         <section id="header">
           <h1 class="title">Michael Emmi</h1>
-          <div class="tagline">Researcher </div>
+          <div class="tagline">Applied Scientist  / Amazon Web Services </div>
           <div class="item">
               <span class="tag"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
               <span class="tag"><a href="https://scholar.google.com/citations?user=fOxqIXYAAAAJ">@Google Scholar</a></span>
