--- a/publications.html
+++ b/publications.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / ">
+    <meta name="description" class="template" content="Michael Emmi: Applied Scientist / Amazon Web Services">
     <link rel="stylesheet" media="screen" href="css/screen.css">
     <link rel="stylesheet" media="print" href="css/print.css">
     <link rel="stylesheet" href="css/cv.css">
