--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -144,6 +144,11 @@
           (CAV ’20).
         </div>
         <div class="item">
+          <span class="article-title">Program Chair</span>.
+          <span class="article-volume"><a href="https://smackers.github.io/democratizing-software-verification-workshop-2020/">Workshop on Democratizing Software Verification</a></span>
+          (DSV ’20).
+        </div>
+        <div class="item">
           <span class="article-title">Selection Committee</span>.
           <span class="article-volume"><a href="https://ibm.biz/plday2019">IBM Programming Languages Day</a></span>
           (PL Day ’19).
