--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
             </div>
             <div class="item">
               <div class="head">
+                <span class="lhs">Program Chair</span>
+                <span class="rhs">
+                  <a href="https://smackers.github.io/democratizing-software-verification-workshop-2020/">
+                  <nobr>DSV ’20</nobr>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
                 <span class="lhs">Selection Committee</span>
                 <span class="rhs">
                   <a href="https://ibm.biz/plday2019">
