Updated publication list.

--- a/index.html
+++ b/index.html
@@ -444,9 +444,25 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a href="papers/journals-corr-KrishnaEEJ.pdf">Verifying Visibility-Based Weak Consistency</a>
+                    <a>Behavioral Simulation for Smart Contracts</a>
                 </span>
-                <span class="rhs"><nobr>arXiv ’19</nobr></span>
+                <span class="rhs"><nobr>PLDI ’20</nobr></span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
+                    <a>Verifying Visibility-Based Weak Consistency</a>
+                </span>
+                <span class="rhs"><nobr>ESOP ’20</nobr></span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
+                    <a>ct-fuzz: Fuzzing for Timing Leaks</a>
+                </span>
+                <span class="rhs"><nobr>ICST ’20</nobr></span>
               </div>
             </div>
             <div class="item">
@@ -463,14 +479,6 @@
                     <a href="papers/conf-cav-EmmiE19.pdf">Violat: Generating Tests of Observational Refinement for Concurrent Objects</a>
                 </span>
                 <span class="rhs"><nobr>CAV ’19</nobr></span>
-              </div>
-            </div>
-            <div class="item">
-              <div class="head">
-                <span class="lhs">
-                    <a href="papers/journals-corr-HeEC19.pdf">ct-fuzz: Fuzzing for Timing Leaks</a>
-                </span>
-                <span class="rhs"><nobr>arXiv ’19</nobr></span>
               </div>
             </div>
             <div class="item">
