Added icst paper.

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>ct-fuzz: Fuzzing for Timing Leaks</a>
+                    <a href="papers/conf-icst-HeEC20.pdf">ct-fuzz: Fuzzing for Timing Leaks</a>
                 </span>
                 <span class="rhs"><nobr>ICST ’20</nobr></span>
               </div>
