--- a/publications.html
+++ b/publications.html
@@ -69,9 +69,9 @@
                 ct-fuzz: Fuzzing for Timing Leaks.
             </span>
             In <span class="article-volume">13th IEEE Conference on Software Testing, Validation and Verification</span>
-            (<nobr>ICST ’20</nobr>).
+            (<nobr>ICST ’20</nobr>), pages 466–471.
             IEEE, 2020.
-            
+            <span class="screen-only">(<a href="papers/conf-icst-HeEC20.pdf">PDF</a>)</span>
           </li>
           <li class="item">
             Ranadeep Biswas, Michael Emmi, and Constantin Enea.
