--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://www.ieee-security.org/TC/CSF2021/">34th IEEE Computer Security Foundations Symposium</a></span>
+          (CSF ’21).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://concur2020.forsyte.at">31st International Conference on Concurrency Theory</a></span>
           (CONCUR ’20).
         </div>
