--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
               <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
+                  <a href="https://www.ieee-security.org/TC/CSF2021/">
+                  <nobr>CSF ’21</nobr>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Program Committee</span>
+                <span class="rhs">
                   <a href="https://concur2020.forsyte.at">
                   <nobr>CONCUR ’20</nobr>
                   </a>
