Add ESOP 2020 paper

--- a/cv.html
+++ b/cv.html
@@ -355,12 +355,12 @@
         <div class="item">
           Siddharth Krishna, Michael Emmi, Constantin Enea, Dejan Jovanovic.
           <span class="article-title">
-              Verifying Visibility-Based Weak Consistency.
+              <a href="https://doi.org/10.1007/978-3-030-44914-8_11">Verifying Visibility-Based Weak Consistency</a>.
           </span>
             In <span class="article-volume">Proc. 29th European Symposium on Programming</span>
-            (<nobr>ESOP ’20</nobr>), LNCS.
+            (<nobr>ESOP ’20</nobr>), LNCS, volume 12075, pages 280–307.
             Springer, 2020.
-          
+          <span class="screen-only">(<a href="papers/conf-esop-KrishnaEEJ20.pdf">PDF</a>)</span>
         </div>
         <div class="item">
           Michael Emmi, Shaobo He, and Gabriela Ciocarlie.
