--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>Verifying Visibility-Based Weak Consistency</a>
+                    <a href="papers/conf-esop-KrishnaEEJ20.pdf">Verifying Visibility-Based Weak Consistency</a>
                 </span>
                 <span class="rhs"><nobr>ESOP ’20</nobr></span>
               </div>
