Add OOPSLA ERC appointment.

--- a/cv.html
+++ b/cv.html
@@ -139,6 +139,11 @@
           (<nobr>CSF ’21</nobr>).
         </div>
         <div class="item">
+          <span class="article-title">External Review Committee</span>.
+          <span class="article-volume"><a href="https://2020.splashcon.org/track/splash-2020-oopsla">2020 ACM SIGPLAN International Conference on Object-Oriented Programming, Systems, Languages, and Applications</a></span>
+          (<nobr>OOPSLA ’20</nobr>).
+        </div>
+        <div class="item">
           <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://concur2020.forsyte.at">31st International Conference on Concurrency Theory</a></span>
           (<nobr>CONCUR ’20</nobr>).
