--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
             </div>
             <div class="item">
               <div class="head">
+                <span class="lhs">External Review Committee</span>
+                <span class="rhs">
+                  <a href="https://2020.splashcon.org/track/splash-2020-oopsla">
+                  <nobr>OOPSLA ’20</nobr>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
                   <a href="https://concur2020.forsyte.at">
