--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -139,6 +139,11 @@
           (CSF ’21).
         </div>
         <div class="item">
+          <span class="article-title">External Review Committee</span>.
+          <span class="article-volume"><a href="https://2020.splashcon.org/track/splash-2020-oopsla">2020 ACM SIGPLAN International Conference on Object-Oriented Programming, Systems, Languages, and Applications</a></span>
+          (OOPSLA ’20).
+        </div>
+        <div class="item">
           <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://concur2020.forsyte.at">31st International Conference on Concurrency Theory</a></span>
           (CONCUR ’20).
