Added PLDI paper.

--- a/cv.html
+++ b/cv.html
@@ -353,9 +353,9 @@
               Behavioral Simulation for Smart Contracts.
           </span>
             In <span class="article-volume">Proc. 41st annual ACM SIGPLAN conference on Programming Language Design and Implementation</span>
-            (<nobr>PLDI ’20</nobr>).
+            (<nobr>PLDI ’20</nobr>), pages 470–486.
             ACM, 2020.
-          
+          <span class="screen-only">(<a href="papers/conf-pldi-BeillahiCEE20.pdf">PDF</a>)</span>
         </div>
         <div class="item">
           Siddharth Krishna, Michael Emmi, Constantin Enea, Dejan Jovanovic.
