--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>Behavioral Simulation for Smart Contracts</a>
+                    <a href="papers/conf-pldi-BeillahiCEE20.pdf">Behavioral Simulation for Smart Contracts</a>
                 </span>
                 <span class="rhs"><nobr>PLDI ’20</nobr></span>
               </div>
