deploy: 29c6781eb5f715385d84ace7c28dbf266f0ee154

--- a/cv.html
+++ b/cv.html
@@ -792,15 +792,19 @@
       <div class="list">
         <p>
           <span><strong>José Bacelar Almeida</strong> (Universidade do Minho)</span>
+          <span><strong>Konstantinos Athanasiou</strong> (Northeastern University)</span>
           <span><strong>Mohamed Faouzi Atig</strong> (Uppsala University)</span>
           <span><strong>Manuel Barbosa</strong> (University of Porto)</span>
           <span><strong>Gilles Barthe</strong> (IMDEA Software)</span>
+          <span><strong>Sidi Mohamed Beillahi</strong> (Université de Paris)</span>
+          <span><strong>Ranadeep Biswas</strong> (Université de Paris)</span>
           <span><strong>Ahmed Bouajjani</strong> (Paris 7)</span>
           <span><strong>Montgomery Carter</strong> (University of Utah)</span>
           <span><strong>Juan Chen</strong> (MSR)</span>
           <span><strong>Gabriela Ciocarlie</strong> (SRI International)</span>
           <span><strong>Derrick Coetzee</strong> (MSR)</span>
           <span><strong>Jeremy Condit</strong> (MSR)</span>
+          <span><strong>Byron Cook</strong> (Amazon Web Services)</span>
           <span><strong>François Dupressoir</strong> (IMDEA Software)</span>
           <span><strong>Constantin Enea</strong> (Paris 7)</span>
           <span><strong>Petros Faloutsos</strong> (UCLA)</span>
@@ -812,10 +816,13 @@
           <span><strong>Chris Hawblitzel</strong> (MSR)</span>
           <span><strong>Shaobo He</strong> (University of Utah)</span>
           <span><strong>Ranjit Jhala</strong> (UCSD)</span>
+          <span><strong>Dejan Jovanovic</strong> (SRI International)</span>
           <span><strong>Eddie Kohler</strong> (Harvard)</span>
+          <span><strong>Siddharth Krishna</strong> (New York University)</span>
           <span><strong>Akash Lal</strong> (MSR)</span>
           <span><strong>Rupak Majumdar</strong> (MPI-SWS)</span>
           <span><strong>Roman Manevich</strong> (UCLA)</span>
+          <span><strong>Colm MacCarthaigh</strong> (Amazon Web Services)</span>
           <span><strong>Kedar Namjoshi</strong> (Nokia Bell Labs)</span>
           <span><strong>Burcu Kulahcioglu Ozkan</strong> (Koç University)</span>
           <span><strong>Gennaro Parlato</strong> (Paris 7)</span>
@@ -825,6 +832,7 @@
           <span><strong>Shaz Qadeer</strong> (MSR)</span>
           <span><strong>Zvonimir Rakamaric</strong> (University of Utah)</span>
           <span><strong>Fernando Rosa-Velardo</strong> (Universidad Complutense de Madrid)</span>
+          <span><strong>Daniel Schwartz-Narbonne</strong> (Amazon Web Services)</span>
           <span><strong>Koushik Sen</strong> (University of California, Berkeley)</span>
           <span><strong>Serdar Tasiran</strong> (Koç University)</span>
           <span><strong>Alice Wang</strong> (UCLA)</span>
