deploy: 1d3eea6e36755670fe6b9248f5847fe2a310863d

--- a/cv.html
+++ b/cv.html
@@ -135,7 +135,7 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume">27th International Static Analysis Symposium</span>
+          <span class="article-volume"><a href="https://conf.researchr.org/home/sas-2021">27th International Static Analysis Symposium</a></span>
           (<nobr>SAS ’21</nobr>).
         </div>
         <div class="item">
