--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
               <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
-                  
+                  <a href="https://conf.researchr.org/home/sas-2021">
                   <nobr>SAS ’21</nobr>
-                  
+                  </a>
                 </span>
               </div>
             </div>
