--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -135,7 +135,7 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume"><a href="">27th International Static Analysis Symposium</a></span>
+          <span class="article-volume"><a href="https://conf.researchr.org/home/sas-2021">27th International Static Analysis Symposium</a></span>
           (SAS ’21).
         </div>
         <div class="item">
