--- a/cv.html
+++ b/cv.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://popl22.sigplan.org">49th ACM SIGPLAN Symposium on Principles of Programming Languages</a></span>
+          (<nobr>POPL ’22</nobr>).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://conf.researchr.org/home/sas-2021">27th International Static Analysis Symposium</a></span>
           (<nobr>SAS ’21</nobr>).
         </div>
