--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="">35th IEEE Computer Security Foundations Symposium</a></span>
+          (CSF ’22).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://popl22.sigplan.org">49th ACM SIGPLAN Symposium on Principles of Programming Languages</a></span>
           (POPL ’22).
         </div>
