deploy: e746b88915b26dfaeef6f436cc03c77ffc2b7cca

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -118,7 +118,7 @@
           <span class="print-only"><a href="mailto:rupak@mpi-sws.org">rupak@mpi-sws.org</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/qadeer/">Shaz Qadeer</a></span>. Research Scientist, Facebook Research.
+          <span class="article-title"><a href="https://research.fb.com/people/qadeer-shaz/">Shaz Qadeer</a></span>. Research Scientist, Facebook Research.
           
         </div>
         <div class="item">
