deploy: 4945850dbddc3d50edfa03e5e800f8826d161603

--- a/index.html
+++ b/index.html
@@ -494,6 +494,14 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
+                    <a>RAPID: Checking API Usage for the Cloud in the Cloud</a>
+                </span>
+                <span class="rhs"><nobr>ESEC/FSE ’21</nobr></span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
                     <a href="https://github.com/michael-emmi/research-papers/raw/master/conf-pldi-BeillahiCEE20.pdf">Behavioral Simulation for Smart Contracts</a>
                 </span>
                 <span class="rhs"><nobr>PLDI ’20</nobr></span>
