--- a/publications.html
+++ b/publications.html
@@ -44,9 +44,19 @@
       <h2>In International Conference Proceedings</h2>
       <ol>
           <li class="item">
+            Michael Emmi, Liana Hadarean, Ranjit Jhala, Lee Pike, Nico Rosner, Martin Schäf, Aritra Sengupta, Willem Visser.
+            <span class="article-title">
+                RAPID: Checking API Usage for the Cloud in the Cloud.
+            </span>
+            In <span class="article-volume">29th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering</span>
+            (<nobr>ESEC/FSE ’21</nobr>).
+            ACM, 2021.
+            
+          </li>
+          <li class="item">
             Sidi Mohamed Beillahi, Gabriela Ciocarlie, Michael Emmi, Constantin Enea.
             <span class="article-title">
-                Behavioral Simulation for Smart Contracts.
+                <a href="https://doi.org/10.1145/3385412.3386022">Behavioral Simulation for Smart Contracts</a>.
             </span>
             In <span class="article-volume">Proc. 41st annual ACM SIGPLAN conference on Programming Language Design and Implementation</span>
             (<nobr>PLDI ’20</nobr>), pages 470–486.
@@ -66,7 +76,7 @@
           <li class="item">
             Michael Emmi, Shaobo He, and Gabriela Ciocarlie.
             <span class="article-title">
-                ct-fuzz: Fuzzing for Timing Leaks.
+                <a href="https://doi.org/10.1109/ICST46399.2020.00063">ct-fuzz: Fuzzing for Timing Leaks</a>.
             </span>
             In <span class="article-volume">13th IEEE Conference on Software Testing, Validation and Verification</span>
             (<nobr>ICST ’20</nobr>), pages 466–471.
