deploy: a7c1586ed1ba275e1d2e265cc6292de0b7f55333

--- a/cv.html
+++ b/cv.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume">20th International Symposium on Automated Technology for Verification and Analysis</span>
+          (<nobr>ATVA ’22</nobr>).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume">35th IEEE Computer Security Foundations Symposium</span>
           (<nobr>CSF ’22</nobr>).
         </div>
