--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="">20th International Symposium on Automated Technology for Verification and Analysis</a></span>
+          (ATVA ’22).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="">35th IEEE Computer Security Foundations Symposium</a></span>
           (CSF ’22).
         </div>
