--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
               <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
-                  
+                  <a href="https://www.ieee-security.org/TC/CSF2022/">
                   <nobr>CSF ’22</nobr>
-                  
+                  </a>
                 </span>
               </div>
             </div>
