--- a/cv.html
+++ b/cv.html
@@ -140,7 +140,7 @@
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume">35th IEEE Computer Security Foundations Symposium</span>
+          <span class="article-volume"><a href="https://www.ieee-security.org/TC/CSF2022/">35th IEEE Computer Security Foundations Symposium</a></span>
           (<nobr>CSF ’22</nobr>).
         </div>
         <div class="item">
